// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Note /> can get add note icon 1`] = `
<React.Fragment>
  <Button
    active={false}
    className="button-animation"
    disabled={false}
    onClick={[Function]}
    size="sm"
    type="button"
    variant="primary"
  >
    <FontAwesomeIcon
      icon="pen"
      size="sm"
      title="Edit Flavor Note"
    />
  </Button>
</React.Fragment>
`;

exports[`<Note /> can get note edit icon 1`] = `
<React.Fragment>
  <Button
    active={false}
    className="button-animation"
    disabled={false}
    onClick={[Function]}
    size="sm"
    type="button"
    variant="primary"
  >
    <FontAwesomeIcon
      icon="pen"
      size="sm"
      title="Edit Flavor Note"
    />
  </Button>
</React.Fragment>
`;

exports[`<Note /> can render 1`] = `
<h3>
  <button
    className="button-animation btn btn-primary btn-sm"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <i
      className="fa pen"
    />
  </button>
   
  Flavor Notes
</h3>
`;

exports[`<Note /> can render with an empty note 1`] = `
<h3>
  <button
    className="button-animation btn btn-primary btn-sm"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <i
      className="fa plus"
    />
  </button>
   
  Flavor Notes
</h3>
`;
